cmake_minimum_required(VERSION 3.28)
project(StructuresAlgos)

set(CMAKE_CXX_STANDARD 20)

add_executable(StructuresAlgos main.cpp
        Array.cpp
        Array.h
        LinkedList.cpp
        LinkedList.h
        Node.cpp
        Node.h
        StringReverser.cpp
        StringReverser.h
        ExpressionChecker.cpp
        ExpressionChecker.h
        Stack.cpp
        Stack.h
        ArrayQueue.cpp
        ArrayQueue.h
        QueueReverser.cpp
        QueueReverser.h
        StackQueue.cpp
        StackQueue.h
        PriorityQueue.cpp
        PriorityQueue.h
        QueueStack.cpp
        QueueStack.h
        HashMap.cpp
        HashMap.h
        KeyValue.cpp
        KeyValue.h
        Tree.cpp
        Tree.h
        TreeNode.cpp
        TreeNode.h
        AVLTree.cpp
        AVLTree.h
        AVLNode.cpp
        AVLNode.h
        Heap.cpp
        Heap.h
        PriorityQueueWithHeap.cpp
        PriorityQueueWithHeap.h
        Heapify.cpp
        Heapify.h
        Trie.cpp
        Trie.h
        HashTrie.cpp
        HashTrie.h
        Graph.cpp
        Graph.h
        WeightedGraph.cpp
        WeightedGraph.h
        Sorter.cpp
        Sorter.h
        Searcher.cpp
        Searcher.h)
